[package]
name = "vc"
version = "0.0.1"
authors = ["Nathan Stocks <cleancut@github.com>"]
edition = "2018"
description = "vc is an implementation of Git in Rust"
license = "GPL-2.0-only"
repository = "https://github.com/CleanCut/vc"
readme = "README.md"
keywords = ["git", "libgit2", "library", "version", "control"]
categories = ["command-line-interface", "data-structures", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"